set rails env in staging

--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -20,6 +20,7 @@ staging:
   app: delve-staging
   config: &default
     BUNDLE_WITHOUT: "development:test:guard"
+    RAILS_ENV: "staging"
   addons:
     - memcache:5mb
     - logging:basic
