--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -14,6 +14,9 @@ production:
   stack: cedar
   config:
     BUNDLE_WITHOUT: "development:test:guard"
+  addons:
+    - memcachier:dev
+    - newrelic:standard
 
 staging:
   stack: cedar
