--- a/db/seeds.yml
+++ b/db/seeds.yml
@@ -333,21 +333,66 @@ activities:
         * Season the puree with salt just before serving to avoid discoloration."
 
 
+# horseradish cream
+- title: Horseradish Cream
+  youtube_id: TvdqT6FMmgw
+  difficulty: Intermediate
+  yield: 320 g
+  description: "dio twee umami chambray. Velit VHS ad godard PBR american
+  apparel. Placeat odio leggings typewriter chambray master cleanse squid,
+  aesthetic seitan ullamco bicycle rights pour-over mlkshk cardigan ea.
+  Mollit bushwick brunch, scenester et direct trade carles eu portland cosby
+  sweater ennui shoreditch. Laboris velit gluten-free, pork belly bicycle
+  rights twee nulla mumblecore cosb"
 
-    # Weigh out ingredients.
+  activity_equipment:
+  - title: Microplane
+  - title: Vacuum packer (or use an improvised strategy)
+    optional: true
 
-    # Combine
-    # Whisk untill all of the sugar and salt dissolves.
-    # Refigerate until needed.
-    # Clean and trim baby red onions from their tops and bottoms, then quarter them.
-    # Seperate all layers of the onion, sorting the red outer petals from the inner white petals.
-    # Trim the tops and bottoms of the green onions.
-    # Split the trimmed green onions lengthwise and remove the cores.
-    # Place the trimmed red onion petals, white onion petals, and green
-    #   onion into seperate container and cover with pickling brine.
-    # Infuse for at least 90 minutes before using
-    # Or vacuum package the onions in the pickling brine for 1 minute pickling.
-
+  recipes:
+  - title: Horseradish Cream
+    yield: 320 g
+    ingredients:
+    - title: Fresh horseradish root
+      quantity: 1
+      unit: ea
+    - title: Cream
+      quantity: 350
+      unit: g
+    - title: Xanthan Gum
+      quantity: 0.35
+      unit: g
+    - title: Salt
+      quantity: 3.2
+      unit: g
+    steps:
+    - title: wash
+      image_id: 4738
+      ingredients:
+      - title: Fresh horseradish root
+        quantity: 1
+        unit: ea
+      directions: "* Wash and peel the fresh horseradish."
+    - title: wash
+      image_id: 4738
+      ingredients:
+      - title: peeled and preped horseradish
+        quantity: 1
+        unit: ea
+      - title: Cream
+        quantity: 350
+        unit: g
+      directions: "* Microplane 50 g and place it into a sous vide bag.\n * Add the cream."
+    - title: vacuum the bag
+      directions: "* Vacuum package and refigerate.\n
+        * Refigerate from 1 to 24 hours. The longer the infusion time the hotter the cream will become."
+    - title: strain
+      directions: "* Strain the cream and then discard the pulp."
+    - title: whisk
+      directions: "* Whisk salt and xanthan gum into the cream.\n
+        * Whip the cream into very soft peaks.\n
+        * Refigerate if not using immediately."
 
 
 
